// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit", align: center, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: center, color: primary, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #FBFCFF !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: left, color: primary, ellipsis: false and theme: light 2`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: left, color: primary, ellipsis: true and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: left, color: primary, ellipsis: true and theme: light 2`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: right, color: primary, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #FBFCFF !important;
  text-align: right !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", align: left, color: inherit, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", align: right, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: right !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", align: left, color: inherit, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", align: right, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: currentColor !important;
  text-align: right !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"medium","xs":"large","s":"medium","m":"inherit","l":"large","xl":"medium"}, align: center, color: primary, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #FBFCFF !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
@media(min-width:480px) {
  :host {
    font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
  }
}

@media(min-width:760px) {
  :host {
    font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) !important;
  }
}

@media(min-width:1000px) {
  :host {
    font-size: inherit !important;
  }
}

@media(min-width:1300px) {
  :host {
    font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) !important;
  }
}

@media(min-width:1760px) {
  :host {
    font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) !important;
  }
}

.root {
  margin: 0;
}"
`;
